game schema added, game routes added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="./game.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Checkers Game</title>
+  <!-- <link rel="stylesheet" href="/styles.css"> -->
 </head>
 <body>
-    <h1>HomePage</h1>
-    <%= username %>
-    <canvas id="myCanvas" style="border:1px solid #000000;"></canvas>
-    
+  <header>
+    <h1>Welcome to Checkers</h1>
+  </header>
+  <main>
+    <div>
+      <form action="/game/create-game" method="GET">
+        <button type="submit">Start New Game</button>
+      </form>
+    </div>
+    <div>
+      <form action="/game/join-game" method="GET">
+        <input type="text" name="gameID" placeholder="Enter Game ID" required>
+        <button type="submit">Join Existing Game</button>
+      </form>
+    </div>
+  </main>
 </body>
-    
 </html>
