game stored in database, orientation according to player, board persistance, apis for move update added

--- a/views/game/creategame.ejs
+++ b/views/game/creategame.ejs
@@ -13,7 +13,7 @@
     <p>Your game has been created! Share this Game ID to invite a friend:</p>
     <p><strong>Game ID:</strong> <%= gameID %></p>
     <div>
-      <a href="/game/<%= gameID %>">Start Game</a>
+      <a href="/game/join-game/<%= gameID %>">Start Game</a>
     </div>
   </main>
 </body>
