--- a/views/gamewindow.ejs
+++ b/views/gamewindow.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./game.js"></script>
+    <script src="/game.js"></script>
 </head>
 <body>
     <h1>HomePage</h1>
-    <%= username %>
+    <h3><%= username %></h3>
     <canvas id="myCanvas" style="border:1px solid #000000;"></canvas>
     
 </body>
