--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
   </header>
   <main>
     <div>
+      <h2><%= username %></h2>
       <form action="/game/create-game" method="GET">
         <button type="submit">Start New Game</button>
       </form>
