--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkers Game</title>
-  <!-- <link rel="stylesheet" href="/styles.css"> -->
 </head>
 <body>
   <header>
@@ -18,11 +17,20 @@
       </form>
     </div>
     <div>
-      <form action="/game/join-game" method="GET">
+      <form id="joinGameForm" onsubmit="handleSubmit(event)">
         <input type="text" name="gameID" placeholder="Enter Game ID" required>
         <button type="submit">Join Existing Game</button>
       </form>
     </div>
   </main>
 </body>
+
+<script>
+  function handleSubmit(event) {
+    event.preventDefault();
+    const gameID = event.target.gameID.value;
+    window.location.href = `/game/join-game/${gameID}`;
+  }
+</script>
+
 </html>
