--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -146,8 +146,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required />
+                    <label for="cpassword">Confirm Password</label>
+                    <input type="password" id="confirm-password" name="cpassword" required />
                 </div>
 
                 <button type="submit">Sign Up</button>
